--- a/index.html
+++ b/index.html
@@ -1,150 +1,179 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name='url' content='https://freetrialparamountplus.github.io/'>
-    <meta name='keywords' content='paramount plus free trial, paramount plus, hbomax tvsignin. hbomax, hbomax/tvsignin enter code'>
-    <meta name='description' content='To get paramount plus Free Trial, visit the paramount plus website, sign up for a new account, and select the free trial option during registration to enjoy access to their premium content for a limited time at no cost.'>
-    <meta name='robots' content='index,follow'>
-    <meta property="og:title" content="How to Get Paramount Plus for Free?"/>
-    <meta property="og:description" content="To get paramount plus Free Trial, visit the paramount plus website, sign up for a new account, and select the free trial option during registration to enjoy access to their premium content for a limited time at no cost." />
-    <meta property="og:url" content="https://freetrialparamountplus.github.io/">
-    <meta name="msvalidate.01" content="564C3D172AB3A954AEFCE6AD0E7E2976" />
-    <meta name="google-site-verification" content="g7Fb-i90_ZHsyUteLkMEm1f4y6yq6cOsfw8EFtm5-rs" /><meta property="og:site_name" content="Paramount plus Free Trial"/>
-    <title>How to Get Paramount Plus for Free?</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="icon" type="image/x-icon" href="images.png">
-   <link rel="icon" href="https://freetrialparamountplus.github.io/images.png"/>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GB8ZFKEM61"></script>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name='url' content='https://1webrootcomsecure.github.io/'>
+        <meta name='keywords' content='Webroot.com/secure'>
+        <meta name='description' content='Activate your Webroot product at Webroot.com/secure to protect your devices from online threats. Enter your product key, download, and install Webroot for comprehensive cybersecurity. '>
+        <meta name='robots' content='index,follow'>
+        <meta property="og:title" content="Webroot.com/secure | Install Webroot SecureAnywhere Antivirus"/>
+        <meta property="og:description" content="Activate your Webroot product at Webroot.com/secure to protect your devices from online threats. Enter your product key, download, and install Webroot for comprehensive cybersecurity. ">
+        <meta property="og:url" content="https://1webrootcomsecure.github.io/">
+        <title>Webroot.com/secure | Install Webroot SecureAnywhere Antivirus</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="icon" type="image/x-icon" href="">
+       <link rel="icon" href=""/>
+     
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9BVSJDHT6H"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GB8ZFKEM61');
+  gtag('config', 'G-9BVSJDHT6H');
 </script>
-    <style>
-        *{
-            margin: 0px;
-            padding: 0px;
-        }
-        body{
-            background-color: #FDFDFD;
-            font-family: 'Times New Roman', Times, serif;
-            font-size: 1.2rem;
-        }
-        .head a, footer a{
-            text-decoration: none;
-            color: white;
-        }
-        .head a:hover, footer a:hover{
-            color: #1C011A;
-        }
-        .head{
-            background: #7F1EDC;
-            color: #FFF;
-            padding: 5px;
-            padding-top: 10px;
-            padding-left: 20px;
-        }
-        .head img{
-            height: 30px;
-        }
-        .title{
-            font-size: 1.6rem;
-        }
-        .container{
-            display: flex;
-            justify-content: space-between;
-        }
-        button{
-            border: none;
-            background: linear-gradient(to bottom, #7F1EDC 0%, #DDBA79 100%);
-            color: #FFF;
-            padding: 0.5rem 3rem;
-            border-radius: 50px;
-            font-weight: bold;
-            font-size: 1.2rem;
-            margin-bottom: 1rem;
-        }
-        h2{
-            padding: 10px 20px;
-            color: #fff;
-            border-radius: 10px;
-            background: #7F1EDC; 
-        }
-        p{
-            padding: 10px;
-        }
-        a{
-            color: #7F1EDC;
-        }
-        a:hover{
-            color: #1C011A;
-        }
-        footer{
-            background-color: #7F1EDC;
-            padding: 5px;
-            color: #FFFFFF;
-        }
-        @media screen and (max-width: 800px) {
-            .menu{
-                display: none;
+
+        <style>
+            *{
+                margin: 0px;
+                padding: 0px;
             }
-        }
-    </style>
-</head>
-<body>
-    <!-- header -->
-    <div class="head">
-        <div class="container align-self-center">
-            <div>
-                <p class="title"><a href="https://freetrialparamountplus.github.io/"><strong>paramount plus Free Trial</strong></p>
-            </div>
-            <div class="menu"> 
-                <p><strong><a href="https://paramountplusfreetrial.github.io/">Get TV Free Trial Now</a></strong></p>
+            body{
+                background-color: #c2c7cd1f;
+                font-family: 'Times New Roman', Times, serif;
+                font-size: 1.2rem;
+            }
+            .head a, footer a{
+                text-decoration: none;
+                color: #fff;
+            }
+            .head a:hover, footer a:hover{
+                color: red;
+            }
+            .head{
+                background: #000;
+                color: #fff;
+                padding: 5px;
+                padding-top: 10px;
+                padding-left: 20px;
+            }
+            .head img{
+                height: 30px;
+            }
+            .title{
+                font-size: 1.6rem;
+            }
+            .container{
+                display: flex;
+                justify-content: space-between;
+            }
+            button{
+                border: 1 px solid #000;
+                background: #000;
+                color: #FFF;
+                padding: 0.5rem 3rem;
+                border-radius: 50px;
+                font-weight: bold;
+                font-size: 1.2rem;
+                margin-bottom: 1rem;
+            }
+            h2
+            {
+                color: #000;
+            }
+            p{
+                padding: 10px;
+            }
+            a{
+                color: #7F1EDC;
+            }
+            a:hover{
+                color: #1C011A;
+            }
+            footer{
+                background-color:#000;
+                padding: 5px;
+                color: #fff;
+            }
+            @media screen and (max-width: 800px) {
+                .menu{
+                    display: none;
+                }
+            }
+        </style>
+    </head>
+    <body>
+        <!-- header -->
+        <div class="head">
+            <div class="container align-self-center">
+                <div>
+                    <p class="title"><a href="https://1webrootcomsecure.github.io/"><strong>Webroot.com/secure</strong></p>
+                </div>
+                <div class="menu"> 
+                    <p><strong><a href="https://1webrootcomsecure.github.io/">Home</a></strong></p>
+                </div>
             </div>
         </div>
-    </div>
-    <!-- content -->
-    <div class="container p-3">
-        <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-10 pt-4">
-                <h1>Paramount plus Free Trial</h1>
-                <br>
-<a href="http://actmynow.s3-website-us-west-1.amazonaws.com"><button>Get Free Trial Now</button></a>
- <br>
-
+        <!-- content -->
+        <div class="container p-3">
+            <div class="row">
+                <div class="col-md-1"></div>
+                <div class="col-md-10 pt-4">
+                    <h1>Webroot.com/secure</h1>
+                    <br>
+    <a href="https://webrootsafe.webconnectus.com"><button>Get Started</button></a>
+  <br>
+<p>In today’s digital age, online security is more crucial than ever. Cyber threats such as malware, ransomware, phishing attacks, and data breaches are on the rise, necessitating robust security measures for both individuals and businesses. One of the leading names in the cybersecurity sphere is Webroot, a Colorado-based company that offers a range of security solutions designed to protect against these threats. One of the key entry points for users looking to secure their devices and data is through Webroot.com/Secure.
 <br>
-<p>Paramount Plus offered a free trial period for new subscribers. During this <a href="https://freetrialparamountplus.github.io/">Paramount plus Free Trial</a> period, users could access the streaming service and explore its content library without being charged. The duration of the free trial and availability may vary depending on promotions and regional offers. </p>
+Activate your Webroot product at Webroot.com/secure to protect your devices from online threats. Enter your product key, download, and install Webroot for comprehensive cybersecurity. Get real-time protection, secure browsing, and identity theft prevention. Start securing your digital life today!</p>
 <br>
-<h2>Does Paramount Plus have a free trial?</h2><br>
-<p>Currently, new users can sign up for a 7-day free trial of either the basic “Essentials” plan or the no-ads premium version, which includes Showtime. Simply navigate to the official Paramount Plus website and click the <b>"Start Free Trial"</b> button to get started. You'll need to create an account and enter your payment information, but you won't be charged anything until the trial period ends.</p>
-<br><h2>How to Get  Paramount plus Free Trial?</h2><br>
-<ol>
-<li><b>Visit Paramount Plus Website:</b> Go to the official <a href="https://freetrialparamountplus.github.io/">Paramount Plus</a> website.</li>
-<li><b>Select Free Trial Option</b>: Look for the option to start a free trial. This is typically prominently displayed on the homepage or in the subscription section.</li>
-<li><b>Choose Subscription Plan:</b> Select the subscription plan you're interested in. Paramount Plus usually offers different plans with varying features and pricing.</li>
-<li><b>Provide Payment Information:</b> You'll need to enter your payment information to start the free trial. Don't worry, you won't be charged during the trial period.</li>
-<li><b>Start Free Trial:</b> Once your payment information is submitted, confirm your subscription to begin the free trial period. You can now enjoy Paramount Plus for free during the trial period.</li>
-<li><b>Cancel Before Trial Ends:</b> If you decide not to continue with the subscription, make sure to cancel before the trial period ends to avoid being charged.</li>
+<h2>Download & Install Webroot SecureAnywhere</h2>
 
-</ol>
+<p><b>Download:</b></p>
+<ul>
+<li>Go to <a href="https://1webrootcomsecure.github.io/">"Webroot.com/secure"</a>.</li>
+<li>Enter your 20-character activation code (XXXX-XXXX-XXXX-XXXX-XXXX).</li>
+<li>Click "Download" to download the installer file (WSASetup.exe).</li>
+</ul>
+<br>
+<p><b>Install:</b></p>
+<ul>
+<li>Run the downloaded installer file (WSASetup.exe).</li>
+<li>Click "Yes" to allow the program to make changes to your device.</li>
+<li>Select your language and click "Next".</li>
+<li>Read the End User License Agreement (EULA) and check the box to accept.</li>
+<li>Choose the installation location and click "Next".</li>
+<li>Select whether to install the Webroot toolbar and search engine (optional).</li>
+<li>Click "Install" to begin the installation process.</li>
+<li>Wait for the installation to complete (this may take a few minutes).</li>
+</ul>
+<br>
+<p><b>Activate:</b></p>
+<ul>
+<li>Launch Webroot SecureAnywhere from the Start menu (Windows) or Applications folder (Mac).</li>
+<li>Enter your activation code again to activate the software.</li>
+<li>Sign in or create a Webroot account to access advanced features and support.</li>
+</ul>
+<br>
+<h2>How to renew Webroot safe Antivirus subscription plan?</h2>
+<ul>
+<li>Go to the Webroot website "webroot.com/safe".</li>
+<li>Click on "My Account" and sign in with your username and password.</li>
+<li>Click on "Subscription" or "Renew" next to your product name.</li>
+<li>Select the renewal term (e.g., 1 year, 2 years, etc.).</li>
+<li>Review your order and click "Next".</li>
+<li>Enter your payment information (if different from the previous payment method).</li>
+<li>Click "Place Order" to complete the renewal process.</li>
+</ul>
+<br>
 
 
- <br>
+</div>
+
+
+     <br>
+                </div>
+                <div class="col-md-1"></div>
             </div>
-            <div class="col-md-1"></div>
         </div>
-    </div>
-    <!-- footer -->
-    <footer>
-        <div class="text-center">
-            <strong><p>© 2024 • All Rights Reserved • <a href="https://freetrialparamountplus.github.io/">Free Trial Paramount Plus</a></p></strong>
-        </div>
-    </footer>
+        <!-- footer -->
+        <footer>
+            <div class="text-center">
+                <strong><p>© 2024 • All Rights Reserved • <a href="https://1webrootcomsecure.github.io/">Webroot.com/secure</a></p></strong>
+            </div>
+        </footer>
 </body>
 </html>
